--- a/css/csstyping.css
+++ b/css/csstyping.css
@@ -42,6 +42,15 @@ legend {
 }
 
 
+.blink_me {
+  animation: blinker 1s linear infinite;
+}
+
+@keyframes blinker {
+  50% {
+    opacity: 0;
+  }
+}
 
  .snowflake {
   color: #fff;
